--- a/data/pages/index.html
+++ b/data/pages/index.html
@@ -77,7 +77,7 @@
                 });
                 if ( result[key][0] == 'V' ) {
                     if ( result[key][3] == '1' ) {
-                        $('#certs').append('<tr><td>'+result[key][1]+"</td><td>"+result[key][0]+"</td><td>"+result[key][4]+"</td><td>"+result[key][5]+"</td><td>C="+result[key][2]['C']+", CN="+result[key][2]['CN']+", O="+result[key][2]['O']+", CertType: "+result[key][6]+"</td><td><button id="+result[key][1]+">Revoke</button><button id=dw"+result[key][2]['CN']+">Download</button></td></tr>");
+                        $('#certs').append('<tr><td>'+result[key][1]+"</td><td>"+result[key][0]+"</td><td>"+result[key][4]+"</td><td>"+result[key][5]+"</td><td>C="+result[key][2]['C']+", CN="+result[key][2]['CN']+", O="+result[key][2]['O']+", CertType: "+result[key][6]+"</td><td><button id="+result[key][1]+">Revoke</button><button id=dw"+result[key][1]+">Download</button></td></tr>");
                     }
                     else if ( result[key][3] == '0' ) {
                         $('#certs').append('<tr><td>'+result[key][1]+"</td><td>"+result[key][0]+"</td><td>"+result[key][4]+"</td><td>"+result[key][5]+"</td><td>C="+result[key][2]['C']+", CN="+result[key][2]['CN']+", O="+result[key][2]['O']+", CertType: "+result[key][6]+"</td><td><button id="+result[key][1]+">Revoke</button></td></tr>");
@@ -88,7 +88,7 @@
                             $.post("api",{ data: ["crtrev",result[key][1],result[key][2]['CN']] }, function () { location.reload() })
                         }
                     });
-                    $('#dw'+result[key][2]['CN']).click( function () {
+                    $('#dw'+result[key][1]).click( function () {
                         window.open("/arc/"+result[key][2]['CN']+".tar","_blank")
                     });
                 }
